--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Boder Radius</title>
 
     
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic:ital@0;1&display=swap" rel="stylesheet">
@@ -62,6 +62,6 @@
         </div>
     </div>
 
-    <script src="/scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
